--- a/OpticalValleyUnite/Info.plist
+++ b/OpticalValleyUnite/Info.plist
@@ -51,5 +51,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSMotionUsageDescription</key>
+	<string>App需要您的同意,才能访问运动与健身</string>
 </dict>
 </plist>
