友盟分享的sdk的包整理,清除冗余,分享的调试应用swift

--- a/OpticalValleyUnite/Info.plist
+++ b/OpticalValleyUnite/Info.plist
@@ -110,6 +110,8 @@
 		<string>yixin</string>
 		<string>yixinopenapi</string>
 		<string>gplus</string>
+        <string>dingtalk</string>
+        <string>dingtalk-open</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
