iOS8.0-iOS11的兼顾AMMap定位的配置修改,调试测试

--- a/OpticalValleyUnite/Info.plist
+++ b/OpticalValleyUnite/Info.plist
@@ -144,5 +144,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>iOS11必须添加人员定位</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>iOS8-iOS11添加定位的必须设置</string>
 </dict>
 </plist>
